# sires

./: .gitignore  CMakeLists.txt  README.md  android.cpp  apple.cpp  apple.mm  build.cpp  build.hpp  linux.cpp  poc-tool.cpp  poc.cpp  poc.wasm.html  sires.cppm  sires.hpp  wasm.cpp  wasm.syscalls.cpp  windows.cpp
.github/workflows/: build.yaml
